# FundAlg3

./: .gitignore
task1/: CMakeLists.txt  foo.c  foo.h  main.c
task3/: CMakeLists.txt  LinkedList.c  LinkedList.h  Liver.c  Liver.h  SQ.C  SQ.h  foo.c  foo.h  main.c
task6/: CMakeLists.txt  foo.c  foo.h  main.c
task7/: CMakeLists.txt  interp.c  interp.h  main.c
tassk2/: CMakeLists.txt  lab2.c  lab2_string.c  vector.c  vector.h  vector_config.c  vector_config.h
